--- a/app/views/snapshots/edit.html.erb
+++ b/app/views/snapshots/edit.html.erb
@@ -23,6 +23,6 @@
   <%= radio_button :name => "image_source", :value => "url", :label => "Use image at url" %>
   <%= text_field :name => "image_url", :label => "URL" %>
   
-  <%= text_area :body, :label => "Body" %>
+  <%= text_area :body, :label => "Body (you may use Markdown)" %>
   <%= submit "Update" %>
 <% end =%>
