--- a/app/views/whiteboards/edit.html.erb
+++ b/app/views/whiteboards/edit.html.erb
@@ -8,6 +8,8 @@
 <%= link_to @whiteboard.name, resource(@whiteboard) %>
 </div>
 
+<%= error_messages_for :whiteboard %>
+
 <%= form_for(@whiteboard, :action => resource(@whiteboard)) do %>
   <%= text_field :name, :label => "Name" %>
   <!-- TODO: allow editing of owners list -->
