--- a/app/views/whiteboards/edit.html.erb
+++ b/app/views/whiteboards/edit.html.erb
@@ -8,7 +8,7 @@
 <%= link_to @whiteboard.name, resource(@whiteboard) %>
 </div>
 
-<%= error_messages_for :whiteboard %>
+<%= error_messages_for @whiteboard %>
 
 <%= form_for(@whiteboard, :action => resource(@whiteboard)) do %>
   <%= text_field :name, :label => "Name" %>
