--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,8 @@
-You're in index of the User controller.
+<h1>Users controller, index action</h1>
+
+<p>Edit this file in <tt>app/views/users/index.html.erb</tt></p>
+<p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
+
+<%= partial :user, :with => @users %>
+ 
+<%= link_to 'New', resource(:users, :new) %>
