--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,15 @@
-<%= error_messages_for :user %>
+<div class="breadcrumbs">
+<%= link_to 'Users', resource(:users) %>
+</div>
+
+<%= error_messages_for @user %>
 
 <%= form_for(@user, :action => resource(:users)) do %>
 	<table>
 	<tr><td>E-mail</td><td><%= text_field :email %></td></tr>
 	<tr><td>Name</td><td><%= text_field :name %></td></tr>
 	<tr><td>Password</td><td><%= password_field :password %></td></tr>
+	<tr><td>Password Confirmation</td><td><%= password_field :password_confirmation %></td></tr>
 	<tr><td></td><td align='right'><%= submit "Signup" %></td></tr>
 	</table>
 <% end =%>
