--- a/app/views/snapshots/new.html.erb
+++ b/app/views/snapshots/new.html.erb
@@ -15,14 +15,14 @@
   <%= text_field :taken_at, :label => "Taken At" %>
   
   <!-- TODO: use JS to enable/disable controls as appropriate? -->
-  <%= radio_button :name => "image_source", :value => "url", :label => "Use image at url" %>
-  <%= text_field :name => "image_url", :label => "URL" %>
-  <%= radio_button :name => "image_source", :value => "id", :label => "Use image from the uploaded pool", :checked => true %>
+  <%= radio_button :use_external_image, :value => true, :label => "Use image at url", :checked => @snapshot.image_external? %>
+  <%= text_field :external_image_url, :label => "URL" %>
+  <%= radio_button :use_external_image, :value => false, :label => "Use image from the uploaded pool", :checked => @snapshot.image_internal? %>
   <div class="imagepicker">
     <% @whiteboard.images.each do |image| %>
       <div class="imagealternative">
         <%= image_tag image.url, :width => 100, :height => 75 %>
-        <%= radio_button :name => "image_id", :value => image.id %>
+        <%= radio_button :internal_image, :value => image, :checked => @snapshot.internal_image == image %>
       </div>
     <% end %>
   </div>
