--- a/app/views/whiteboards/new.html.erb
+++ b/app/views/whiteboards/new.html.erb
@@ -10,7 +10,6 @@
 <%= error_messages_for @whiteboard %>
 
 <%= form_for (@whiteboard, :action => resource(:whiteboards)) do %>
-  <%= text_field :name, :label => "Name" %>
-  <!-- TODO: allow editing of owners list -->
+  <%= partial :form, :whiteboard => @whiteboard %>
   <%= submit "Create" %>
 <% end =%>
