--- a/app/views/home/_group.html.erb
+++ b/app/views/home/_group.html.erb
@@ -1,1 +1,1 @@
-<%= link_to group.name, url(:whiteboard_snapshot, group) %><br />
+<li><%= link_to group.name, url(:group, group) %>, <%= group.location %></li>
