--- a/app/views/shared/_snapshot_summary.html.erb
+++ b/app/views/shared/_snapshot_summary.html.erb
@@ -2,5 +2,5 @@
   <div class="snapshotdate">
     <%= link_to_snapshot snapshot %>
   </div>
-  <%= image_tag snapshot.image_url, :class => 'snapshotimage' %>
+  <%= image_tag snapshot.image.url, :class => 'snapshotimage' %>
 </p>
