--- a/app/views/whiteboards/_form.html.erb
+++ b/app/views/whiteboards/_form.html.erb
@@ -1,2 +1,3 @@
 <%= text_field :name, :label => "Name" %>
 <!-- TODO: allow editing of owners list -->
+<%= check_box :public, :label => "Make Public" %>
