--- a/app/views/snapshots/_form.html.erb
+++ b/app/views/snapshots/_form.html.erb
@@ -1,18 +1,9 @@
 <!-- TODO: use date/time picker -->
 <%= text_field :taken_at, :label => "Taken At" %>
 
-<!-- TODO: use JS to enable/disable controls as appropriate? -->
-<%= radio_button :use_external_image, :value => true, :label => "Use image at url", :checked => snapshot.image_external? %>
-<%= text_field :external_image_url, :label => "URL" %>
-<%= radio_button :use_external_image, :value => false, :label => "Use image from the uploaded pool", :checked => snapshot.image_internal? %>
-<div class="imagepicker">
-  <% snapshot.whiteboard.images.each do |image| %>
-    <div class="imagealternative">
-      <%= image_tag image.url, :width => 100, :height => 75 %>
-      <%= radio_button :internal_image, :value => image, :checked => snapshot.internal_image == image %>
-    </div>
-  <% end %>
-</div>
-<%= link_to "Upload another image", resource(snapshot.whiteboard, :images, :new) %>
+<%= hidden_field :name => :image_id, :value => snapshot.image.id %>
+<%= image_tag snapshot.image.url, :class => 'snapshotimage' %>
+<%= link_to "Change image", url(:new_whiteboard_image, snapshot.whiteboard, :existing_image_id => snapshot.image.id) %>
 
 <%= text_area :body, :label => "Body (you may use Markdown)" %>
+<%= check_box :public, :label => "Make Public" %>
