--- a/app/views/whiteboards/_form.html.erb
+++ b/app/views/whiteboards/_form.html.erb
@@ -1,3 +1,5 @@
-<%= text_field :name, :label => "Name" %>
-<!-- TODO: allow editing of owners list -->
-<%= check_box :public, :label => "Make Public" %>
+<table>
+<tr><td>Name:</td><td><%= text_field :name %></td></tr>
+<tr><td>Make public:</td><td><%= check_box :public %></td></tr>
+<tr><td>Group:</td><td><%= select :group_id, :collection => [[0, "None"]]+session.user.groups.map {|x| [x.id, x.name]} %></td></tr>
+</table>
