--- a/app/views/home/_whiteboard.html.erb
+++ b/app/views/home/_whiteboard.html.erb
@@ -1,1 +1,1 @@
-<%= link_to whiteboard.name, url(:whiteboard_snapshot, whiteboard) %><br />
+<li><%= link_to whiteboard.name, url(:whiteboard, whiteboard) %>, <%= link_to whiteboard.group.name, url(:group, whiteboard.group) unless whiteboard.group.nil? %></li>
