--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,15 +44,15 @@
 				<br /><br />
 				</div>
 				<% end %>
-			<div align='center'>
+			<div align='center' style='clear:both;'>
 				<div class='non_constrained_box'>
-				<h3><%= link_to "Boards", url(:whiteboards) %> on Boardlog.</h3>
+				<h3><%= link_to "Public boards", url(:whiteboards) %> on Boardlog.</h3>
 					<ul>
 					<%= partial("whiteboard", :with => @whiteboards) %>
 					</ul>
 				</div>
 				<div class='non_constrained_box'>
-				<h3><%= link_to "Groups", url(:groups) %> on Baoardlog.</h3>
+				<h3><%= link_to "Public groups", url(:groups) %> on Baoardlog.</h3>
 					<ul>
 					<%= partial("group", :with => @groups) %>
 					</ul>
