--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -15,10 +15,13 @@
 		<div id='top_inner_container' align='center'>
 			<table class='table_container'><tr><td valign='center' id='controls_container'>
 			<%= link_to "<b>Home</b>", '/home/index', :class => 'boardlink' %> |
-			<%= link_to "Groups", url(:groups) %> | 
+			<%= link_to "Whiteboards", url(:whiteboards) %> | 
+			<%= link_to "Groups", url(:groups) %> 
 			<% if session.user %>
+					&nbsp; &nbsp;
 			  	<!-- logged in user menu -->
-			   <%= session.user.name %> - <%= link_to 'Logout', '/logout' unless session.user.nil? %>
+			  	[<%= image_tag session.user.gravatar_url(12), :class => 'userpicture' %>
+			   <%= link_to session.user.name, url(:user, session.user) %>] - <%= link_to 'Logout', '/logout' unless session.user.nil? %>
 			<% else %>
 				<%= link_to "Signup", "/users/new" %> |
 				<%= link_to "Login", "/login" %>
@@ -31,9 +34,7 @@
 	<div id='content_container' style='width:100%'>
 		<div id='content_inner_container' style='padding:15px;'>
     	<%= message[:notice] %>
-
     	<%= catch_content :for_layout %>
-
 	 	</div>
 	</div>
 	<div id='bottom_container' align='center'>
