--- a/app/views/snapshots/index.html.erb
+++ b/app/views/snapshots/index.html.erb
@@ -1,10 +1,5 @@
-<h1>Snapshots controller for <%=h @whiteboard.name %></h1>
-
-<p>Edit this file in <tt>app/views/snapshots/index.html.erb</tt></p>
-<p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
-
 <div class="breadcrumbs">
-<%= link_to 'Whiteboards', resource(:whiteboards) %>
+<%= link_to 'Whiteboards', resource(:whiteboards) %> ->
 <%= link_to @whiteboard.name, resource(@whiteboard) %>
 </div>
 
