--- a/app/views/whiteboards/edit.html.erb
+++ b/app/views/whiteboards/edit.html.erb
@@ -1,12 +1,9 @@
-<h1>Whiteboards controller, edit action</h1>
-
-<p>Edit this file in <tt>app/views/whiteboards/edit.html.erb</tt></p>
-<p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
-
 <div class="breadcrumbs">
-<%= link_to 'Whiteboards', resource(:whiteboards) %>
+<%= link_to 'Whiteboards', resource(:whiteboards) %> -> 
 <%= link_to @whiteboard.name, resource(@whiteboard) %>
 </div>
+
+<h3>Edit whiteboard settings</h3>
 
 <%= error_messages_for @whiteboard %>
 
