--- a/app/views/whiteboards/index.html.erb
+++ b/app/views/whiteboards/index.html.erb
@@ -1,10 +1,24 @@
-<h1>Whiteboards controller, index action</h1>
-
-<p>Edit this file in <tt>app/views/whiteboards/index.html.erb</tt></p>
-<p>For more information and examples of CRUD views read <a href="http://wiki.merbivore.com/howto/crud_view_example_with_merb_using_erb"> this wiki page</a>
-
-<% @whiteboards.each do |whiteboard| %>
-  <%= link_to whiteboard.name, resource(whiteboard) %></td>
+<div align='center'>
+<table cellspacing='6' cellpadding='10'>
+<tr>
+<% if session.user %>
+<td valign='top'>
+	<h3>My Whiteboards</h3>
+	<%= link_to "<b>Create new whiteboard</b>", resource(:whiteboards, :new) %><br /><br />
+	<%= partial :whiteboard, :with => session.user.owned_whiteboards, :as => :whiteboard %>
+	<% if @requested_whiteboards!=[] %>
+		<br /><br />
+		<h3>Ownership-requested whiteboards</h3>
+		<%= partial :whiteboard, :with => @requested_whiteboards, :as => :whiteboard %>
+	<% end %>
+</td>
 <% end %>
- 
-<%= link_to 'New', resource(:whiteboards, :new) %>
+<td valign='top' style='border-left:solid 1px #ccc;'>
+	<h3>Public Whiteboards</h3>
+	<ul>
+		<%= partial :whiteboard, :with => @whiteboards, :as => :whiteboard %>
+	</ul>
+</td>
+</tr>
+</table>
+</div>
